--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
     </dependency>
   </dependencies>
 
+  <dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>4.8.0</version>
+    <scope>test</scope>
+  </dependency>
+
   <build>
     <plugins>
       <plugin>
